<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="30dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/adjective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_rect_left_4dp"
        android:paddingStart="24dp"
        android:paddingTop="6dp"
        android:paddingEnd="24dp"
        android:paddingBottom="6dp"
        android:text="@string/search_detail_adjective_label" />

    <TextView
        android:id="@+id/noun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-1dp"
        android:background="@drawable/shape_rect_center_4dp"
        android:paddingStart="24dp"
        android:paddingTop="6dp"
        android:paddingEnd="24dp"
        android:paddingBottom="6dp"
        android:text="@string/search_detail_noun_label" />

    <TextView
        android:id="@+id/verb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-1dp"
        android:background="@drawable/shape_round_rect_right_4dp"
        android:paddingStart="24dp"
        android:paddingTop="6dp"
        android:paddingEnd="24dp"
        android:paddingBottom="6dp"
        android:text="@string/search_detail_verb_label" />
</LinearLayout>